# Auris

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
sidecar/: ai.py  audio.py  database.py  embeddings.py  export.py  main.py  ocr.py  requirements.txt  transcribe.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AudioLevelMeter.tsx  ChatMessage.tsx  LoadingScreen.tsx  MicPermissionGuide.tsx  Onboarding.tsx  SessionCard.tsx  Sidebar.tsx  TranscriptLine.tsx
src/lib/: api.ts  tauri.ts  theme.ts
src/pages/: AskAuris.tsx  Dashboard.tsx  History.tsx  Search.tsx  SessionDetail.tsx  Settings.tsx  Tasks.tsx  Today.tsx
